<resources>
    <string name="app_name">Uber app</string>
    <string name="title_activity_maps">Map</string>
    <string name="home_page">Where to?</string>
    <string name="for_maaz">For maaz</string>
    <string name="dr">Dr.Qureshi Medical Check-Up C...</string>
    <string name="where_to">Where to?</string>
    <string name="add_home">Add Home</string>
    <string name="add_work">Add Work</string>
    <string name="saved_places">Saved Places</string>
    <string name="international_airport">Chhatrapati Shivaji International Airport</string>
    <string name="pheonix">High Street Pheonix</string>
    <string name="car_type"><b>Economy</b></string>
    <string name="ride_type">Affordable, compact rides</string>
    <string name="uber_go">UberGo</string>
    <string name="premier">Premier</string>
    <string name="rupees_1">Rs. 357.69</string>
    <string name="rupees_2">Rs. 407.86</string>
    <string-array name="for_user">
        <item> For Maaz </item>
        <item> For Wahab </item>
        <item> For Aves </item>
        <item> For Umair</item>
    </string-array>
    <string-array name="titles_of_list">
        <item>Chhatrapti Shivaji Terminus</item>
        <item>Mumbai Central</item>
        <item>Chhatrapati Shivaji International Airport</item>
        <item>High Street Pheonix</item>
    </string-array>
    <string-array name="descriptions_of_list">
        <item>Area, Fort, Mumbai, Maharashtra</item>
        <item>Mumbai Central, Mumbai, Maharashtra</item>
        <item>Mumbai, Maharashtra</item>
        <item>462, Senapati Bapat Marg, Lower Parel, Mumbai, Maharashtra</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
