<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <TextView
        android:id="@+id/economy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_type"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/ride"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ride_type"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:layout_below="@id/economy"/>

    <ImageView
        android:id="@+id/ubergo_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/car1"
        android:layout_below="@id/ride"
        android:layout_marginTop="5dp"
        android:layout_marginStart="92dp"/>


    <ImageView
        android:id="@+id/ubergo_logo2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/car2"
        android:layout_below="@id/ride"
        android:layout_marginTop="5dp"
        android:layout_marginStart="225dp"
        android:clickable="true" />
    <TextView
        android:id="@+id/uberlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uber_go"
        android:textStyle="bold"
        android:layout_below="@id/ubergo_logo"
        android:layout_marginStart="98dp"
        android:layout_marginTop="3dp"/>
    <TextView
        android:id="@+id/uberlogo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/premier"
        android:textStyle="bold"
        android:layout_below="@id/ubergo_logo2"
        android:layout_marginStart="230dp"
        android:layout_marginTop="3dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rupees_1"
        android:layout_below="@id/uberlogo"
        android:layout_marginStart="103dp"
        android:layout_marginTop="3dp"
        android:textSize="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rupees_2"
        android:textStyle="bold"
        android:layout_below="@id/uberlogo2"
        android:layout_marginStart="235dp"
        android:layout_marginTop="3dp"
        android:textSize="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </LinearLayout>


</RelativeLayout>