<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ScrollView1"
    tools:context=".places">



<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/RelativeLayout1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearmajor1"
        android:orientation="vertical"
        android:background="@drawable/shape3"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearminor1"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_of_user"
                android:src="@drawable/usericon"
                android:layout_gravity="center_horizontal"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearminor2"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <EditText
            android:id="@+id/tt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shape"
            android:paddingStart="7dp"
            android:paddingEnd="15dp"
            android:paddingTop="5dp"
            android:gravity="center"
            android:hint="@string/dr"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearminor3"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">


            <EditText
            android:id="@+id/tt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shape2"
            android:paddingEnd="199dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:hint="@string/where_to"
            android:gravity="start"
                android:inputType="text"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearmajor2"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_below="@id/linearmajor1"
        android:background="@drawable/shape3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_home"
            android:layout_gravity="start"
            android:padding="10dp"
            android:drawableStart="@drawable/home"
            android:drawablePadding="30dp"
            android:background="@drawable/shape4"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_work"
            android:layout_gravity="start"
            android:padding="10dp"
            android:drawableStart="@drawable/bag"
            android:drawablePadding="30dp"
            android:background="@drawable/shape4"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saved_places"
            android:layout_gravity="start"
            android:padding="10dp"
            android:drawableStart="@drawable/star"
            android:drawablePadding="30dp"
            android:background="@drawable/shape4"
            android:id="@+id/saved_places"/>


    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_view"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/linearmajor2"
        android:background="#fff"
        android:layout_marginTop="10dp">
    </ListView>

</RelativeLayout>

</ScrollView>